--- a/frontend/view_blog.html
+++ b/frontend/view_blog.html
@@ -27,32 +27,39 @@
   <script src="src/config.js"></script>
   <script>
     $(document).ready(function() {
+      const sessionId = localStorage.getItem('sessionId');
+      if (!sessionId) {
+        alert('You are not logged in. Redirecting to login page.');
+        window.location.href = 'login.html';
+        return;
+      }
+
       // Extract the blog ID from the query string
       const urlParams = new URLSearchParams(window.location.search);
       const blogId = urlParams.get('id');
 
-      // Fetch blog details (GET /api/blogs/:id)
-      fetch(`${API_BASE_URL}/blogs/${blogId}`, { credentials: 'include' })
+      // Fetch blog details using sessionId
+      fetch(`${API_BASE_URL}/blogs/${blogId}?sessionId=${sessionId}`)
         .then(response => response.json())
         .then(blog => {
-            $('#blogTitle').text(blog.title);
-            $('#blogContent').text(blog.content);
-            // Load comments after fetching the blog
-            fetchComments();
+          $('#blogTitle').text(blog.title);
+          $('#blogContent').text(blog.content);
+          // Load comments after fetching the blog
+          fetchComments();
         })
         .catch(error => console.error('Error fetching blog:', error));
 
-      // Function to fetch and display comments (GET /api/blogs/:id/comments)
+      // Function to fetch and display comments using sessionId
       function fetchComments() {
-        fetch(`${API_BASE_URL}/blogs/${blogId}/comments`, { credentials: 'include' })
+        fetch(`${API_BASE_URL}/blogs/${blogId}/comments?sessionId=${sessionId}`)
           .then(response => response.json())
           .then(comments => {
             const commentsList = $('#commentsList');
-            commentsList.empty(); // Clear previous comments
+            commentsList.empty();
             comments.forEach(comment => {
               const commentDiv = $(`
                 <div class="mb-2 p-2 border rounded">
-                  <strong>${comment.name || 'Anonymous'}</strong>: ${comment.content}<br>
+                  <strong>${comment.commenter || 'Anonymous'}</strong>: ${comment.content}<br>
                   <small>${new Date(comment.created_at).toLocaleString()}</small>
                 </div>
               `);
@@ -62,7 +69,7 @@
           .catch(error => console.error('Error fetching comments:', error));
       }
 
-      // Add a comment (POST /api/blogs/:id/comments)
+      // Add a comment using sessionId
       $('#addCommentButton').on('click', function() {
         const content = $('#commentInput').val();
         if (!content.trim()) {
@@ -70,17 +77,16 @@
           return;
         }
 
-        fetch(`${API_BASE_URL}/blogs/${blogId}/comments`, {
+        fetch(`${API_BASE_URL}/blogs/${blogId}/comments?sessionId=${sessionId}`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',
           body: JSON.stringify({ content })
         })
         .then(response => {
           if (response.ok) {
             alert('Comment submitted successfully!');
-            $('#commentInput').val(''); // Clear the input field
-            fetchComments(); // Refresh comments
+            $('#commentInput').val('');
+            fetchComments();
           } else {
             response.text().then(text => alert('Error submitting comment: ' + text));
           }
